--- a/Portal.Client/Components/UIComponents/Card.razor
+++ b/Portal.Client/Components/UIComponents/Card.razor
@@ -145,7 +145,7 @@
         right: 0 !important;
     }
 
-    @@media (min-width: 768px) {
+  /*   @@media (min-width: 768px) {
         .card-container {
             width: fit-content;
         }
@@ -171,5 +171,5 @@
         .card-container {
             width: auto;
         }
-    }
+    } */
 </style>
