--- a/Portal.Client/_Imports.razor
+++ b/Portal.Client/_Imports.razor
@@ -27,3 +27,4 @@
 @inject IJSRuntime _jsRuntime;
 @inject IAccessTokenProvider AuthorizationService
 @inject SessionStorage _sessionStorage;
+@inject IDialogService _dialog
