--- a/Portal.Client/Pages/Council/Councils.razor
+++ b/Portal.Client/Pages/Council/Councils.razor
@@ -1,4 +1,4 @@
-@inherits BaseDataComponent;
+﻿@inherits BaseDataComponent;
 @using Portal.Shared
 @using Portal.Shared.DTO.Councils
 @using Portal.Shared.ResponseModels
@@ -7,14 +7,18 @@
 @page "/councils"
 
 <div class="container">
-    <div class="d-flex flex-row gap-2 header">
-        <h2>Councils</h2>
-        <MudTextField T="string" @bind-Value="_searchString" Placeholder="Search" Adornment="Adornment.Start" TextChanged="(async (x) => await OnSearch(x))" Variant="Variant.Outlined"
-                      AdornmentIcon="@Icons.Material.Filled.Search" IconSize="Size.Large" Class="mt-0 mb-4" Clearable="true" OnClearButtonClick="ClearSearch"></MudTextField>
-        <div style="margin: auto">
-            <MudButton Variant="Variant.Filled" Color="Color.Primary" OnClick="ClearSearch" StartIcon="@Icons.Material.Filled.Add">New</MudButton>
-        </div>
-    </div>
+    <PageHeader>
+        <Content>
+            <div>
+                <h2>Councils</h2>
+                <div>
+                    <MudButton Variant="Variant.Text" Color="Color.Primary" OnClick="ClearSearch" StartIcon="@Icons.Material.Filled.Add">New</MudButton>
+                </div>
+            </div>
+            <MudTextField T="string" @bind-Value="_searchString" Placeholder="Search" Adornment="Adornment.Start" TextChanged="(async (x) => await OnSearch(x))" Variant="Variant.Outlined"
+                          AdornmentIcon="@Icons.Material.Filled.Search" IconSize="Size.Large" Class="mt-0 mb-4" Clearable="true" OnClearButtonClick="ClearSearch"></MudTextField>
+        </Content>
+    </PageHeader>
     <Card>
         <ChildContent>
             <MudDataGrid T="CouncilPartialDto"
@@ -29,16 +33,18 @@
                          @ref="_grid"
                          Striped="true">
                 <Columns>
-                    <TemplateColumn StickyLeft="true">
+                    <TemplateColumn StickyLeft="true" Title="Action" HeaderStyle="max-width:80px">
                         <CellTemplate>
-                            <MudButton Variant="Variant.Filled" Color="Color.Info" Size="Size.Small" Href="@($"/councils/{context.Item.councilId}")" StartIcon="@Icons.Material.Filled.RemoveRedEye">View</MudButton>
+                            <MudIconButton Variant="Variant.Text" Color="Color.Info" Size="Size.Small" Href="@($"/councils/{context.Item.councilId}")" Icon="@Icons.Material.Filled.RemoveRedEye">View</MudIconButton>
+                            <button class="btn-icon-small">✏️</button>
+                            <button class="btn-icon-small">🗑️</button>
                         </CellTemplate>
                     </TemplateColumn>
                     <PropertyColumn Property="x => x.councilId" ShowFilterIcon="false" HeaderStyle="max-width: 75px" Title="ID" />
                     <PropertyColumn Property="x => x.councilName" ShowFilterIcon="false" Title="Council Name" />
                     <PropertyColumn Property="x => x.phone" ShowFilterIcon="false" Title="Phone" />
                     <PropertyColumn Property="x => x.email" ShowFilterIcon="false" Title="Email" />
-                    <PropertyColumn Property="x => x.website" ShowFilterIcon="false" Title="Website" >
+                    <PropertyColumn Property="x => x.website" ShowFilterIcon="false" Title="Website">
                         <CellTemplate>
                             <a href="@context.Item.website"><small>@context.Item.website</small></a>
                         </CellTemplate>
@@ -53,16 +59,6 @@
 </div>
 
 <style>
-    .header {
-        background: white;
-        padding: 1rem 2rem;
-        border-radius: 12px;
-        box-shadow: 0 1px 3px rgba(0,0,0,0.1);
-        margin-bottom: 1rem;
-        display: flex;
-        justify-content: space-between;
-        align-items: center;
-    }
 </style>
 
 
